--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "host": "vite --host"
   },
   "dependencies": {
+    "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
