--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-axios": "^2.0.6",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.9.0",
+    "react-spinners": "^0.13.8",
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
