--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "styled-components": "^5.3.6"
   },
   "devDependencies": {
+    "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@types/styled-components": "^5.1.26",
