--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "host": "vite --host"
   },
   "dependencies": {
+    "framer-motion": "^10.12.12",
     "hamburger-react": "^2.5.0",
     "react": "^18.2.0",
     "react-axios": "^2.0.6",
