--- a/package.json
+++ b/package.json
@@ -19,13 +19,15 @@
     "react-router-dom": "^6.9.0",
     "react-spinners": "^0.13.8",
     "styled-components": "^5.3.6",
-    "swiper": "^10.1.0"
+    "swiper": "^10.1.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@types/styled-components": "^5.1.26",
+    "@types/uuid": "^9.0.7",
     "@vitejs/plugin-react": "^2.2.0",
     "autoprefixer": "^10.4.13",
     "postcss": "^8.4.19",
