--- a/.github/workflows/deploy_main_to_ftp.yml
+++ b/.github/workflows/deploy_main_to_ftp.yml
@@ -11,7 +11,7 @@ jobs:
     steps:
       - name: Get latest code
         uses: actions/checkout@v3
-      - run: yarn install && yarn build
+      - run: npm install && npm build
 
       - name: Sync files  
         uses: wangyucode/sftp-upload-action@v2.0.2
